# Mara

./: .gitignore  .mcp.json  .venv  =2.0.0  ARCHITECTURE.md  Makefile  README.md  SYSTEMIC_FIXES_PLAN_PHASE2.md  cpp_structure.txt  mara_structure.txt  platformio.ini  pyproject.toml  pytest.ini  requirements.txt  robot_structure.txt  structure.py
firmware/mcu/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  mara_runtime.pc.in  partitions_ota_big.csv  partitions_single_app.csv  platformio.ini  test_rig_sketch.ino
firmware/mcu/docs/: LAYER_RULES.md
firmware/mcu/include/: mcu.h
firmware/mcu/scripts/: generate_all_actuators.py  generate_all_sensors.py
firmware/mcu/src/: main.cpp
firmware/mcu/test/: test_runner.h
firmware/mcu/tools/: check_layers.py
host/: .mcp.json  mara_structure.txt  pyproject.toml  pytest.ini  requirements.txt
host/examples/: 00_getting_started.py  04_telemetry_stream.py  05_gpio_control.py  06_motor_control.py  07_encoder_feedback.py  08_session_recording.py  09_full_robot_control.py  10_custom_robot.py  11_sensors_and_telemetry.py  13_imu_to_servo.py  README.md
host/examples/control_graphs/: imu_pitch_servo_fullrange_raw.json  imu_pitch_servo_fullrange_snappy.json  imu_pitch_servo_pythonish.json  imu_pitch_servo_safe.json  imu_pitch_servo_snappy.json
host/mara_host/: ARCHITECTURE.md  __init__.py  plugin.py  robot.py
host/mara_host/api/: README.md  __init__.py  _generated_api.py  controller_slot.py  dc_motor.py  differential_drive.py  encoder.py  gpio.py  imu.py  observer_slot.py  pid_controller.py  pins.py  pwm.py  recording.py  sensor_base.py  sensors.py  servo.py  signals.py  stepper.py  testing.py  ultrasonic.py  velocity.py
host/mara_host/benchmarks/: __init__.py  core.py  efficiency_eval.py  efficiency_results.json
host/mara_host/bindings/: __init__.py  mara_bindings.py
host/mara_host/camera/: README.md  __init__.py  async_client.py  client.py  host_module.py  models.py  module.py  recorder.py  stats.py  stream.py
host/mara_host/cli/: __init__.py  cli_config.py  completions.py  console.py  context.py  main.py
host/mara_host/command/: __init__.py  binary_commands.py  binary_mixin.py  client.py  factory.py  interfaces.py  json_to_binary.py  payloads.py  types.py
host/mara_host/config/: __init__.py  client_commands.py  command_defs.py  commands.json  control_graph_defs.py  control_graph_registry.json  control_graph_schema.json  feature_flags.py  gpio_channels.json  gpio_channels.py  pin_config.py  pinout.txt  pins.json  robot_config.py  robot_config_schema.py  robot_profile_default.yaml  test_payloads.json  version.py
host/mara_host/control/: design.py  examples.py  state_space.py  upload.py
host/mara_host/control_graph/: __init__.py  nodes.py
host/mara_host/core/: __init__.py  _generated_config.py  base_module.py  build_profiles.py  event_bus.py  host_module.py  messages.py  protocol.py  result.py  settings.py  shutdown.py  utils.py
host/mara_host/examples/: README.md
host/mara_host/gui/: __init__.py  app.py  main_window.py
host/mara_host/hw/: __init__.py  gpio.py
host/mara_host/logger/: __init__.py  central.py  logger.py
host/mara_host/mcp/: __init__.py  __main__.py  _generated_http.py  _generated_tools.py  categories.py  errors.py  host_tools.py  http_server.py  instructions.py  plugin_loader.py  prompts.py  resources.py  runtime.py  server.py  tool_schema.py
host/mara_host/motor/: __init__.py  motion.py  pill_carousel.py
host/mara_host/observability/: __init__.py  events.py  recording.py
host/mara_host/research/: __init__.py  analysis.py  config_loader.py  experiments.py  metrics.py  plotting.py  recording.py  replay.py  simulation.py  sysid.py
host/mara_host/robot_layer/: __init__.py  context.py  loader.py  model.py  pose.py  service.py
host/mara_host/robots/: arm_3dof.yaml  test_rig.yaml
host/mara_host/runtime/: __init__.py  linux_runtime.py  robot_runtime.py  runtime.py
host/mara_host/sensor/: __init__.py  encoder.py
host/mara_host/services/: __init__.py  _generated_services.py  types.py
host/mara_host/telemetry/: __init__.py  binary_parser.py  file_logger.py  host_module.py  models.py  parser.py  section_registry.py  telemetry_sections.py
host/mara_host/tools/: build_firmware.py  gen_api.py  gen_binary_commands.py  gen_build_config.py  gen_can.py  gen_command_payloads.py  gen_commands.py  gen_control_blocks.py  gen_control_graph.py  gen_control_graph_types.py  gen_hardware.py  gen_mcp_servers.py  gen_services.py  gen_telemetry.py  gen_tooling_backends.py  gen_version.py  generate_all.py  generate_pins.py  gpio_mapping_gen.py  imu_calibrator.py  pins.py  platform_schema.py
host/mara_host/transport/: async_base_transport.py  bluetooth_transport.py  can_defs.py  can_defs_generated.py  can_transport.py  serial_transport.py  stream_transport.py  (+1 more)
host/scripts/: monitor_control_graph.py  structure.py  test_bt_dual.py  test_bt_longmon.py  test_bt_monitor.py  test_bt_pair_monitor.py  test_bt_patience.py  test_bt_raw.py  test_rig_hardware.py
host/tests/: conftest.py  helpers.py  test_architecture.py  test_base_transport.py  test_build_upload_cli.py  test_cli_surface_parity.py  test_client_async.py  test_client_json_telemetry.py  test_client_safety.py  test_client_telemetry_bin_routing.py  test_command_payloads.py  test_command_types.py  test_connection_monitor.py  test_control_design.py  test_control_graph_interfaces.py  test_control_graph_schema.py  test_control_graph_service.py  test_control_graph_transform_registry.py  test_control_services.py  test_event_bus.py  test_gen_telemetry.py  test_gui_panels.py  test_hil_churn.py  test_hil_long_soak.py  test_hil_mini_soak.py  test_hil_send_commands.py  test_hil_smoke.py  test_http_handlers.py  test_identity_handshake.py  test_interface_convergence.py  test_json_to_binary.py  test_jsonl_logger.py  test_linux_bindings.py  test_linux_integration.py  test_linux_runtime.py  test_mcp_http_runtime_surface.py  test_mcp_plugins.py  test_mcp_runtime.py  test_mcp_server_instructions.py  test_metrics_and_benchmarks_artifacts.py  (+27 more)
(+1245 files in other folders)
