[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mara-host"
version = "0.5.0"
description = "MARA (Modular Asynchronous Robotics Architecture) - Python platform for ESP32 robotics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kwasi Addo"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Robotics",
]
keywords = ["robotics", "esp32", "motor-control", "sensors"]

dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "fsspec>=2025.10.0",
    "idna>=3.11",
    "Jinja2>=3.1.6",
    "kiwisolver>=1.4.9",
    "MarkupSafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "pyparsing>=3.2.5",
    "pyserial>=3.5",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "torch>=2.9.1",
    "typing_extensions>=4.15.0",
    "urllib3>=2.5.0",
    "aiohttp>=3.9.0",
    "aiomqtt>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
mara = "mara_host.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/kwasiaddo/Host"
Repository = "https://github.com/kwasiaddo/Host"

[tool.setuptools.packages.find]
where = ["."]
include = ["mara_host*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
