[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mara-host"
version = "0.5.0"
description = "MARA (Modular Asynchronous Robotics Architecture) - Python platform for ESP32 robotics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kwasi Addo"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Robotics",
]
keywords = ["robotics", "esp32", "motor-control", "sensors"]

# Core dependencies - minimal set for basic robot control
dependencies = [
    "pyserial>=3.5",
    "aiohttp>=3.9.0",
    "aiomqtt>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "typing_extensions>=4.15.0",
    "jsonschema>=4.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
mara = "mara_host.cli.main:main"

[project.optional-dependencies]
# Development tools (includes numpy for control design tests)
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "numpy>=2.0.0",
]

# Research/simulation (numpy, matplotlib, sympy for control design)
research = [
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "sympy>=1.12.0",
    "scipy>=1.11.0",
]

# Computer vision (camera module, detection)
vision = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=2.0.0",
]

# Machine learning (optional ML features)
ml = [
    "torch>=2.0.0",
    "numpy>=2.0.0",
]

# Full install (everything)
full = [
    "mara-host[research,vision,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/kwasblue/mara"
Repository = "https://github.com/kwasblue/mara"
Documentation = "https://github.com/kwasblue/mara/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["mara_host*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
